Implemented downloadAttachmentFile
