# docs/swagger.yaml
@@ -263,6 +263,31 @@ paths:
       summary: Delete an attachment file
       tags:
       - Files
+  /v1/files/download/attachment/{attachmentFileId}:
+    get:
+      description: Downloads an attachment file associated with a specific task
+      parameters:
+      - description: Attachment File ID
+        in: path
+        name: attachmentFileId
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: File downloaded successfully
+        "400":
+          description: Invalid request or file ID
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Download an attachment file
+      tags:
+      - Files
   /v1/files/upload/attachment/{taskId}:
     post:
       consumes:
